--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-server.port = 8080
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=kiwonsang
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+server.port=8080
+
